test_suite/alan-2022-examples/failing/002750_mutation.alan
source E7 begin C := put "" 1 end
